<resources>
    <string name="app_name">Pulsera</string>
    <string name="bienvenido">Bienvenido A Nuestra Tienda</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">USD/Pesos</string>
    <string name="dolar">USD</string>
    <string name="pesos">Pesos</string>
    <string name="cantidad">Cantidad</string>
    <string name="enviar">Enviar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="error1">Digite la Cantidad</string>
    <string name="parte1">El valor de su compra es:</string>
    <string-array name="material">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="compra">Su Compra</string>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
</resources>
